# where-s-wally

./: .gitignore  CMakeLists.txt  README.md  main.cc
src/: CMakeLists.txt  find_wally.cc  find_wally.hh
